<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tasks.MyDay">

    <item
        android:orderInCategory="100"
        android:id="@+id/action_sort_by"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_paint"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_theme"
        android:orderInCategory="200"
        android:icon="@drawable/ic_sort"
        android:title="@string/change_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_completed_tasks"
        android:orderInCategory="300"
        android:icon="@drawable/ic_correct"
        android:title="@string/menu_search_item"
        app:showAsAction="never" />
</menu>
