<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_3"
    tools:context=".PlanYourDayReminder">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/turn_on_reminder"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/reminder_action_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:theme="@style/SwitchCompatStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/reminder_info_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/turn_on_reminder_info_1"
            android:textColor="@color/background_color_6"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reminder_info_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/turn_on_reminder_info_2"
            android:textColor="@color/background_color_6"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_time_text" />

        <TextView
            android:id="@+id/reminder_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="4:50"
            android:textColor="@color/color_3"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_info_text_1" />

        <TextView
            android:id="@+id/reminder_am_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="PM"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/reminder_time_text"
            app:layout_constraintTop_toBottomOf="@+id/reminder_info_text_1" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_info_text_2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/reminder_day_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_sun"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_mon"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_tue"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_wed"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_thu"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_fri"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/reminder_day_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/day_sat"
                    android:textColor="@color/white" />

            </LinearLayout>

        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>