<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:background="@color/background_color_2"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/popup_title_text"
            android:text="@string/new_list"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/list_title"
            android:layout_below="@+id/popup_title_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:maxLength="230"
            android:background="@drawable/new_list_input"
            android:hint="@string/enter_list_name"
            android:textSize="18sp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColorHint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textCapSentences" />

        <TableRow
            android:layout_below="@+id/list_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:backgroundTint="@color/background_color_2"
                android:background="@drawable/card_ripple"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <TextView
                android:id="@+id/create_button"
                android:text="@string/create_list"
                android:textColor="#333"
                android:textSize="16sp"
                android:backgroundTint="@color/background_color_2"
                android:background="@drawable/card_ripple"
                android:textAllCaps="true"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </TableRow>

    </RelativeLayout>

</androidx.cardview.widget.CardView>